[package]
name = "alphamon-rs"
version = "0.2.2"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/timleg002/alphamon-rs"
description = "Library for interacting with Alpha Outback UPSes"
keywords = ["serial"]
categories = ["science"]

[features]
serial = ["serialport"]
usb-hidapi = ["hidapi"]
default = ["usb-hidapi", "serial"]

[lints.clippy]
all = "warn"
cargo = "warn"
indexing_slicing = "warn"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
serialport = { version = "4.3.0", optional = true }
hidapi =  { version = "2.6.3", optional = true, default-features = false, features = ["linux-native"] }
thiserror = "2.0.12"
crc = "3.0.1"
serde = { version = "1.0.197", features = ["serde_derive"] }
int-enum = "1.1.1"
serde_json = "1.0.115"
chrono = "0.4.37"
log = "0.4.27"
async-trait = "0.1.88"


